ci(github): added test step for Node LTS+1 on Linux

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,3 +82,15 @@ jobs:
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test
+
+  test-linux-node-lts-next:
+    name: 'Test (Linux, Node LTS+1)'
+    needs:
+      - lint
+      - compile
+    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@fix/ci'
+    with:
+      node-version: 18.x
+      npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
+      download-artifact-name: 'compiled-libs'
+      command: make test
