--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,3 +94,16 @@ jobs:
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test
+
+  test-windows-node-lts-next:
+    name: 'Test: Windows, LTS'
+    needs:
+      - lint
+      - compile
+    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@fix/ci'
+    with:
+      runs-on: 'windows-latest'
+      node-version: 16.x
+      npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
+      download-artifact-name: 'compiled-libs'
+      command: make test
