ci(github): debug chromedriver setup on GitHub actions

--- a/.github/workflows/main-node-step.yaml
+++ b/.github/workflows/main-node-step.yaml
@@ -57,6 +57,9 @@ jobs:
     env:
       SEVEN_ZIP: ${{ inputs.runs-on == 'windows-latest' && '7z.exe' || '7z'  }}
     steps:
+      - name: debug env.CHROMEWEBDRIVER
+        run: ls ${{ env.CHROMEWEBDRIVER }}
+
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
