ci(github): debug env variables

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,22 @@ permissions:
 
 jobs:
 
+  debug-env:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: debug env (Windows)
+        if: matrix.os == 'windows-latest'
+        run: 'dir env:'
+      - name: debug env (Linux/macOS)
+        if: matrix.os != 'windows-latest'
+        run: 'env'
+
   detect-website-changes:
     name: 'Detect website changes'
     uses: 'serenity-js/serenity-js/.github/workflows/main-detect-changes.yaml@fix/ci'
