--- a/.github/workflows/main-node-step.yaml
+++ b/.github/workflows/main-node-step.yaml
@@ -67,12 +67,19 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
 
+      - name: Set CHROMEDRIVER_FILEPATH (Windows)
+      - run: |
+          chcp 65001 #set code page to utf-8
+          echo ("CHROMEDRIVER_FILEPATH=" + $env:CHROMEWEBDRIVER + "chromedriver.exe") >> $env:GITHUB_ENV
+      - name: Set CHROMEDRIVER_FILEPATH (Linux & macOS)
+        run: echo "CHROMEDRIVER_FILEPATH=$CHROMEWEBDRIVER/chromedriver" >> $GITHUB_ENV
+      - name: Get $CHROMEDRIVER_FILEPATH
+        run: echo ${{ env.CHROMEDRIVER_FILEPATH }}
+
       - name: Install Node Modules (${{ inputs.npm-install-command }})
         uses: bahmutov/npm-install@v1
         with:
           install-command: ${{ inputs.npm-install-command }}
-        env:
-          CHROMEDRIVER_FILEPATH: $CHROMEWEBDRIVER/chromedriver
 
       - name: Download artifact
         if: ${{ inputs.download-artifact-name || inputs.download-artifact-path }}
