--- a/.github/workflows/main-node-step.yaml
+++ b/.github/workflows/main-node-step.yaml
@@ -68,10 +68,12 @@ jobs:
           node-version: ${{ inputs.node-version }}
 
       - name: Set CHROMEDRIVER_FILEPATH (Windows)
+        if: runner.os == 'Windows'
         run: |
           chcp 65001 #set code page to utf-8
           echo ("CHROMEDRIVER_FILEPATH=" + $env:CHROMEWEBDRIVER + "chromedriver.exe") >> $env:GITHUB_ENV
       - name: Set CHROMEDRIVER_FILEPATH (Linux & macOS)
+        if: runner.os != 'Windows'
         run: echo "CHROMEDRIVER_FILEPATH=$CHROMEWEBDRIVER/chromedriver" >> $GITHUB_ENV
       - name: Get $CHROMEDRIVER_FILEPATH
         run: echo ${{ env.CHROMEDRIVER_FILEPATH }}
