--- a/.github/workflows/main-node-step.yaml
+++ b/.github/workflows/main-node-step.yaml
@@ -67,16 +67,8 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
 
-      - name: Set CHROMEDRIVER_FILEPATH (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          chcp 65001 #set code page to utf-8
-          echo ("CHROMEDRIVER_FILEPATH=" + $env:CHROMEWEBDRIVER + "chromedriver.exe") >> $env:GITHUB_ENV
-      - name: Set CHROMEDRIVER_FILEPATH (Linux & macOS)
-        if: runner.os != 'Windows'
-        run: echo "CHROMEDRIVER_FILEPATH=$CHROMEWEBDRIVER/chromedriver" >> $GITHUB_ENV
-      - name: Get $CHROMEDRIVER_FILEPATH
-        run: echo ${{ env.CHROMEDRIVER_FILEPATH }}
+      - name: Set ChromeDriver filepath
+        uses: ./.github/actions/setup-chromedriver-filepath
 
       - name: Install Node Modules (${{ inputs.npm-install-command }})
         uses: bahmutov/npm-install@v1
