--- a/.github/workflows/main-integration-test-step.yaml
+++ b/.github/workflows/main-integration-test-step.yaml
@@ -1,4 +1,4 @@
-name: Node step
+name: Integration test step
 
 on:
   workflow_call:
@@ -24,6 +24,15 @@ on:
         type: string
         required: false
         default: 'npm ci'
+
+      sauce-username:
+        description: 'Sauce Labs username'
+        type: string
+        required: false
+      sauce-access-token:
+        description: 'Sauce Labs API Key'
+        type: string
+        required: false
 
       download-artifact-name:
         description: 'The name of the artifact to download before invoking the command'
@@ -57,6 +66,14 @@ jobs:
     env:
       SEVEN_ZIP: ${{ inputs.runs-on == 'windows-latest' && '7z.exe' || '7z'  }}
     steps:
+      - name: Open Sauce Connect Tunnel
+        if: ${{ inputs.sauce-username && inputs.sauce-access-token }}
+        uses: saucelabs/sauce-connect-action@v2
+        with:
+          username: ${{ inputs.sauce-username }}
+          accessKey: ${{ inputs.sauce-access-token }}
+          tunnelIdentifier: github-serenity-js-test-integration-saucelabs-${{ github.run_number }}-tunnel
+
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
@@ -74,6 +91,8 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           install-command: ${{ inputs.npm-install-command }}
+        env:
+          CHROMEDRIVER_FILEPATH: ${{ env.CHROMEWEBDRIVER }}
 
       - name: Download artifact
         if: ${{ inputs.download-artifact-name || inputs.download-artifact-path }}
