--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -138,8 +138,6 @@ jobs:
       - compile
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@fix/ci'
     with:
-      sauce-username: ${{ secrets.SAUCE_USERNAME }}
-      sauce-access-token: ${{ secrets.SAUCE_ACCESS_KEY }}
       runs-on: 'ubuntu-latest'
       node-version: 16.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
@@ -147,3 +145,6 @@ jobs:
       command: make INTEGRATION_SCOPE=saucelabs integration-test
       upload-artifact-name: 'test-integration-saucelabs-coverage-reports'
       upload-artifact-path: 'package.json "target/**/*"'
+    secrets:
+      sauce-username: ${{ secrets.SAUCE_USERNAME }}
+      sauce-access-key: ${{ secrets.SAUCE_ACCESS_KEY }}
