--- a/.github/actions/setup-chromedriver-filepath/action.yaml
+++ b/.github/actions/setup-chromedriver-filepath/action.yaml
@@ -10,7 +10,7 @@ runs:
       shell: pwsh
       run: |
         chcp 65001 #set code page to utf-8
-        echo ("CHROMEDRIVER_FILEPATH=" + $env:CHROMEWEBDRIVER + "chromedriver.exe") >> $env:GITHUB_ENV
+        echo ("CHROMEDRIVER_FILEPATH=" + $env:CHROMEWEBDRIVER + "\\chromedriver.exe") >> $env:GITHUB_ENV
     - name: Get $CHROMEDRIVER_FILEPATH (Windows)
       if: runner.os == 'Windows'
       shell: 'pwsh'
