--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -141,12 +141,13 @@ jobs:
       - compile
     uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@fix/ci'
     with:
+      modules: "[\"webdriverio-web\"]"
       runs-on: 'ubuntu-latest'
       node-version: 16.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
-      command: make INTEGRATION_SCOPE=saucelabs integration-test
-      upload-artifact-name: 'test-integration-saucelabs-coverage-reports'
+      command: make INTEGRATION_SCOPE=${{ env.module }} integration-test
+      upload-artifact-name: 'test-integration-coverage-reports-${{ env.module }}'
       upload-artifact-path: 'package.json "target/**/*"'
     secrets:
       sauce-username: ${{ secrets.SAUCE_USERNAME }}
