--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "integration-test:playwright": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
     "integration-test:protractor": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
     "integration-test:webdriverio": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
-    "integration-test:saucelabs": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-web",
+    "integration-test:webdriverio-web": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-web",
     "site": "lerna run site --stream --scope '@documentation/*'",
     "report": "npm run coverage:merge && npm run coverage:report",
     "coverage:merge": "bin/istanbul-merge.ts",
