--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -146,8 +146,8 @@ jobs:
       node-version: 16.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
-      command: make INTEGRATION_SCOPE=${{ env.module }} integration-test
-      upload-artifact-name: 'test-integration-coverage-reports-${{ env.module }}'
+      command: 'make INTEGRATION_SCOPE=INTEGRATION_MODULE integration-test'
+      upload-artifact-name: 'test-integration-coverage-reports-${{ env.INTEGRATION_MODULE }}'
       upload-artifact-path: 'package.json "target/**/*"'
     secrets:
       sauce-username: ${{ secrets.SAUCE_USERNAME }}
