--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -147,7 +147,7 @@ jobs:
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: 'make INTEGRATION_SCOPE=INTEGRATION_MODULE integration-test'
-      upload-artifact-name: 'test-integration-coverage-reports-${{ env.INTEGRATION_MODULE }}'
+      upload-artifact-name: 'test-integration-coverage-reports'
       upload-artifact-path: 'package.json "target/**/*"'
     secrets:
       sauce-username: ${{ secrets.SAUCE_USERNAME }}
