ci(github): corrected a typo

--- a/.github/workflows/main-integration-test-step.yaml
+++ b/.github/workflows/main-integration-test-step.yaml
@@ -70,6 +70,7 @@ jobs:
         module: ${{ fromJSON(inputs.modules) }}
       fail-fast: false
 
+    name: ${{ matrix.module }}
     runs-on:  ${{ inputs.runs-on }}
     env:
       SEVEN_ZIP: ${{ inputs.runs-on == 'windows-latest' && '7z.exe' || '7z'  }}
