ci(github): added integration test matrix

--- a/.github/workflows/main-integration-test-step.yaml
+++ b/.github/workflows/main-integration-test-step.yaml
@@ -130,6 +130,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           retention-days: 3
-          name: ${{ inputs.upload-artifact-name }}
+          name: ${{ inputs.upload-artifact-name }}-${{ matrix.module }}
           path: |
             ${{ inputs.upload-artifact-name }}.zip
