--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -141,7 +141,41 @@ jobs:
       - compile
     uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@fix/ci'
     with:
-      modules: "[\"webdriverio-web\"]"
+      modules: '["webdriverio-web"]'
+      runs-on: 'ubuntu-latest'
+      node-version: 16.x
+      npm-install-command: make BOOTSTRAP_SCOPE=@integration install
+      download-artifact-name: 'compiled-libs'
+      command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
+      upload-artifact-name: 'test-integration-coverage-reports-saucelabs'
+      upload-artifact-path: 'package.json "target/**/*"'
+    secrets:
+      sauce-username: ${{ secrets.SAUCE_USERNAME }}
+      sauce-access-key: ${{ secrets.SAUCE_ACCESS_KEY }}
+
+  test-integration:
+    name: 'Integration'
+    needs:
+      - lint
+      - compile
+    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@fix/ci'
+    with:
+      modules: |
+        [
+          "cucumber-1",
+          "cucumber-2",
+          "cucumber-3",
+          "cucumber-4",
+          "cucumber-5",
+          "cucumber-6",
+          "cucumber-7",
+          "cucumber-8",
+          "jasmine",
+          "mocha",
+          "playwright",
+          "protractor",
+          "webdriverio"
+        ]
       runs-on: 'ubuntu-latest'
       node-version: 16.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
@@ -149,6 +183,3 @@ jobs:
       command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
       upload-artifact-name: 'test-integration-coverage-reports'
       upload-artifact-path: 'package.json "target/**/*"'
-    secrets:
-      sauce-username: ${{ secrets.SAUCE_USERNAME }}
-      sauce-access-key: ${{ secrets.SAUCE_ACCESS_KEY }}
