--- a/integration/webdriverio-cucumber/.nycrc.yml
+++ b/integration/webdriverio-cucumber/.nycrc.yml
@@ -1,12 +1,12 @@
 extends: '../../.nycrc.yml'
 cwd: '../../packages'
-reportDir: '../target/coverage/integration-webdriverio-web'
+reportDir: '../target/coverage/integration-webdriverio-cucumber'
 tempDir: '../.nyc_output'
 include:
   - 'core/src/**/*.ts'
   - 'core/lib/**/*.js'
-  - 'mocha/src/**/*.ts'
-  - 'mocha/lib/**/*.js'
+  - 'cucumber/src/**/*.ts'
+  - 'cucumber/lib/**/*.js'
   - 'web/src/**/*.ts'
   - 'web/lib/**/*.js'
   - 'webdriverio/src/**/*.ts'
