--- a/integration/playwright-web/.nycrc.yml
+++ b/integration/playwright-web/.nycrc.yml
@@ -3,12 +3,15 @@ cwd: '../../packages'
 reportDir: '../target/coverage/integration-playwright-web'
 tempDir: '../.nyc_output'
 include:
+  - 'core/src/**/*.ts'
+  - 'core/lib/**/*.js'
+  - 'mocha/src/**/*.ts'
+  - 'mocha/lib/**/*.js'
   - 'web/src/**/*.ts'
   - 'web/lib/**/*.js'
   - 'playwright/src/**/*.ts'
   - 'playwright/lib/**/*.js'
 exclude:
-  - '**/.esdoc.js'
   - '**/target/**'
   - '**/spec/**'
   - '**/*.d.ts'
