--- a/integration/protractor-jasmine/tsconfig.json
+++ b/integration/protractor-jasmine/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "compilerOptions": {
     "target": "es2019",
-    "lib": ["es2019"],
+    "lib": ["es2019", "dom"],
     "module": "commonjs",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "outDir": "./lib",
+    "types": [
+      "node",
+      "chai-as-promised"
+    ]
   },
 
-  "exclude": [
-    "node_modules"
+  "include": [
+    "src/**/*.ts"
   ]
 }
