ci(github): support for extracting multiple downloaded artifacts

--- a/.github/workflows/main-integration-test-step.yaml
+++ b/.github/workflows/main-integration-test-step.yaml
@@ -107,7 +107,7 @@ jobs:
         env:
           CHROMEDRIVER_FILEPATH: ${{ env.CHROMEWEBDRIVER }}
 
-      - name: Download artifact
+      - name: Download artifact(s)
         if: ${{ inputs.download-artifact-name || inputs.download-artifact-path }}
         uses: actions/download-artifact@v3
         with:
@@ -116,7 +116,13 @@ jobs:
 
       - name: Decompress artifact
         if: ${{ inputs.download-artifact-name }}
-        run:  ${{ env.SEVEN_ZIP }} x -aoa ${{ inputs.download-artifact-name }}.zip
+        working-directory: ${{ inputs.download-artifact-path }}
+        run: ${{ env.SEVEN_ZIP }} x -aoa ${{ inputs.download-artifact-name }}.zip
+
+      - name: Decompress artifacts
+        if: ${{ inputs.download-artifact-path && inputs.download-artifact-name == '' }}
+        working-directory: ${{ inputs.download-artifact-path }}
+        run: ${{ env.SEVEN_ZIP }} x -aoa '*.zip'
 
       - name: Execute command
         run: ${{ inputs.command }}
