--- a/.github/workflows/main-node-step.yaml
+++ b/.github/workflows/main-node-step.yaml
@@ -75,7 +75,7 @@ jobs:
         with:
           install-command: ${{ inputs.npm-install-command }}
 
-      - name: Download artifact(s)
+      - name: Download artifact
         if: ${{ inputs.download-artifact-name || inputs.download-artifact-path }}
         uses: actions/download-artifact@v3
         with:
@@ -86,21 +86,6 @@ jobs:
         if: ${{ inputs.download-artifact-name }}
         working-directory: ${{ inputs.download-artifact-path }}
         run:  ${{ env.SEVEN_ZIP }} x -aoa ${{ inputs.download-artifact-name }}.zip
-
-      - name: List artifacts
-        if: ${{ inputs.download-artifact-path || inputs.download-artifact-name }}
-        working-directory: ${{ inputs.download-artifact-path }}
-        run: tree
-
-      - name: Decompress artifacts
-        if: ${{ inputs.download-artifact-path && inputs.download-artifact-name == '' && runner.os != 'Windows' }}
-        working-directory: ${{ inputs.download-artifact-path }}
-        run: ls **/*.zip | xargs -n1 ${{ env.SEVEN_ZIP }} x -aoa
-
-      - name: List decompressed artifacts
-        if: ${{ inputs.download-artifact-path || inputs.download-artifact-name }}
-        working-directory: ${{ inputs.download-artifact-path }}
-        run: tree
 
       - name: Execute command
         run: ${{ inputs.command }}
