--- a/.github/workflows/main-collect-artifacts.yaml
+++ b/.github/workflows/main-collect-artifacts.yaml
@@ -27,7 +27,7 @@ jobs:
         run: tree
 
       - name: Decompress all artifacts to current directory
-        run:  ls **/*.zip | xargs -n1 7z e -aoa
+        run:  ls **/*.zip | xargs -n1 7z x -aoa
 
       - name: List decompressed artifacts
         run: tree
