--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -211,7 +211,7 @@ jobs:
       download-artifact-name: 'aggregated-code-coverage'
       command: make report
       upload-artifact-name: 'aggregated-code-coverage-report'
-      upload-artifact-path: 'target'
+      upload-artifact-path: 'package.json target'
 
   coverage-publish:
     name: 'Coverage: publish'
