--- a/.github/workflows/main-integration-test-step.yaml
+++ b/.github/workflows/main-integration-test-step.yaml
@@ -75,18 +75,8 @@ jobs:
     env:
       SEVEN_ZIP: ${{ inputs.runs-on == 'windows-latest' && '7z.exe' || '7z'  }}
       INTEGRATION_MODULE: ${{ matrix.module }}
+      SAUCE_TUNNEL_ID: github-serenity-js-test-integration-saucelabs-${{ github.run_number }}-tunnel
     steps:
-      - name: Open Sauce Connect Tunnel
-        # Use an env var because secrets can't be used in condition statements - https://github.com/actions/runner/issues/520
-        env:
-          NEEDS_SAUCE_LABS: ${{ secrets.sauce-username && secrets.sauce-access-key }}
-        if: ${{ env.NEEDS_SAUCE_LABS != '' }}
-        uses: saucelabs/sauce-connect-action@v2
-        with:
-          username: ${{ secrets.sauce-username }}
-          accessKey: ${{ secrets.sauce-access-key }}
-          tunnelIdentifier: github-serenity-js-test-integration-saucelabs-${{ github.run_number }}-tunnel
-
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
@@ -118,6 +108,17 @@ jobs:
         if: ${{ inputs.download-artifact-name }}
         working-directory: ${{ inputs.download-artifact-path }}
         run: ${{ env.SEVEN_ZIP }} x -aoa ${{ inputs.download-artifact-name }}.zip
+
+      - name: Open Sauce Connect Tunnel
+        # Use an env var because secrets can't be used in condition statements - https://github.com/actions/runner/issues/520
+        env:
+          NEEDS_SAUCE_LABS: ${{ secrets.sauce-username != '' && secrets.sauce-access-key !== '' }}
+        if: ${{ env.NEEDS_SAUCE_LABS != '' }}
+        uses: saucelabs/sauce-connect-action@v2
+        with:
+          username: ${{ secrets.sauce-username }}
+          accessKey: ${{ secrets.sauce-access-key }}
+          tunnelIdentifier: github-serenity-js-test-integration-saucelabs-${{ github.run_number }}-tunnel
 
       - name: Execute command
         run: ${{ inputs.command }}
