ci(github): corrected configuration of the sauce labs step

--- a/.github/workflows/main-integration-test-step.yaml
+++ b/.github/workflows/main-integration-test-step.yaml
@@ -112,7 +112,7 @@ jobs:
       - name: Open Sauce Connect Tunnel
         # Use an env var because secrets can't be used in condition statements - https://github.com/actions/runner/issues/520
         env:
-          NEEDS_SAUCE_LABS: ${{ secrets.sauce-username != '' && secrets.sauce-access-key !== '' }}
+          NEEDS_SAUCE_LABS: ${{ secrets.sauce-username && secrets.sauce-access-key }}
         if: ${{ env.NEEDS_SAUCE_LABS != '' }}
         uses: saucelabs/sauce-connect-action@v2
         with:
